# video_ASCII

./: .gitignore  CMakeLists.txt  README.md
cmake/: cpm.cmake
video_converter/: CMakeLists.txt
video_converter/source/: main.cpp
